vlib/v/checker/tests/interface_cast_from_immutable_to_mutable_err.out
vlib/v/checker/tests/interface_cast_from_immutable_to_mutable_err.vv:15:26: error: `bar` is immutable, declare it with `mut` to make it mutable
   13 |         foo: 'hello'
   14 |     }
   15 |     mut foobar := Interface(bar)
      |                             ~~~
   16 |     foobar.foo = 'bye'
   17 |     Interface(bar).foo = 'changed'
vlib/v/checker/tests/interface_cast_from_immutable_to_mutable_err.vv:17:12: error: `bar` is immutable, declare it with `mut` to make it mutable
   15 |     mut foobar := Interface(bar)
   16 |     foobar.foo = 'bye'
   17 |     Interface(bar).foo = 'changed'
      |               ~~~
   18 | }
