vlib/v/checker/tests/interface_cast_from_immutable_to_mutable_err.vv
interface Interface {
mut:
	foo string
}

struct Struct {
mut:
	foo string
}

fn main() {
	bar := Struct{
		foo: 'hello'
	}
	mut foobar := Interface(bar)
	foobar.foo = 'bye'
	Interface(bar).foo = 'changed'
}
